--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,26 +3,21 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Chat test</title>
+        <title>Bastien's chat test</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
  
     <body>
-        <h1>Bastien's chat test</h1>
-
-        
+        <!-- <h1>Bastien's chat test</h1>         -->
 
         <div id="chat">
             <div id="chat-msgs">
-                <div class="msg-div">
-                    <!-- <div class="msg-text">
-                        
-                    </div> -->
-                </div>
+                <div class="msg-div"></div>
             </div>
+
             <div id="chat-text-input-and-button">
-                <input type="text" id="message-to-send" placeholder="Votre message..." autofocus />
-                <input type="button" id="button-send-message" value="Envoyer" />
+                <input type="text" id="message-to-send" placeholder="Type your message..." autofocus />
+                <!-- <input type="button" id="button-send-message" value="Send" /> -->
             </div>
         </div>
     </body>
