fix(nicknames): fixed if user enters a empty nickname

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,10 @@
                 <div class="msg-div"></div>
             </div>
 
-            <div id="chat-text-input-and-button">
+<!--            <div id="chat-text-input">-->
                 <input type="text" id="message-to-send" placeholder="Type your message..." autofocus />
                 <!-- <input type="button" id="button-send-message" value="Send" /> -->
-            </div>
+            <!--</div>-->
         </div>
     </body>
 
