--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     </head>
  
     <body>
-        <!-- <h1>Bastien's chat test</h1>         -->
+        <h1 class="center">Bastien's chat test</h1>        
 
         <div id="chat">
             <div id="chat-msgs">
